# veilkey-v2

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ko.md  README.md  docker-compose.yml
.dal/: TEAM.md  dal.spec.cue
.dal/dev/: dal.cue
.dal/improver/: dal.cue  instructions.md
.dal/leader/: dal.cue
.dalfactory/: dal.cue
assets/: demo.cast
docs/: OPERATING-MODEL.md  README.md  architecture.md  cli.md  contributing.md  data-safety.md  installation.md  security-model.md  setup.md  vssh-design.md
examples/: CLAUDE.md
install/: README.md
installer/: .gitlab-ci.yml  INSTALL.md  README.md  components.toml.example  install.sh
scripts/: chain-e2e-test.sh  install-localvault.sh  install-veil-mac-remote.sh  install-veil-mac.sh  pre-commit  vk-bulk-apply-sync.sh
services/veil-cli/: Cargo.toml  Dockerfile  README.md  hook-veilkey-shell.sh  install-veilroot-boundary.sh  install-veilroot-codex.sh  patterns.yml  veil  veil-prompt.sh  veil-work-tmux  veilcontainer-tmux  veilkey  veilkey-veilroot-curl  veilkey-veilroot-egress-guard  veilkey-veilroot-egress-guard@.service  veilkey-veilroot-http  veilkey-veilroot-observe  veilkey-veilroot-observe@.service  veilkey-veilroot-wget  veilroot-shell  verify-veilroot-session.sh
services/veil-cli/snippets/: veilroot-veilkey-shell.sh
services/veil-cli/src/: api.rs  cli_validate.rs  commands.rs  config.rs  detector.rs  lib.rs  logger.rs  output.rs  project_config.rs  proxy.rs  state.rs
services/veil-cli/src/pty/: ansi.rs  masker.rs  mod.rs  session.rs  sync.rs
(+605 files in other folders)
