[package]
name = "veil-cli-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "veil_cli_rs"
path = "src/lib.rs"

[[bin]]
name = "veil"
path = "src/bin/veil.rs"

[[bin]]
name = "veilkey"
path = "src/bin/veilkey.rs"

[[bin]]
name = "veilkey-cli"
path = "src/bin/veilkey_cli.rs"

[[bin]]
name = "veilkey-session-config"
path = "src/bin/session_config.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
regex = "1"
urlencoding = "2"
ureq = { version = "2", features = ["json"] }
rustls = { version = "0.23", features = ["ring"] }
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
nix = { version = "0.29", features = ["term", "signal", "process"] }
base64 = "0.22.1"
rpassword = "7"
